[package]
name = "grin-health"
version = "0.1.0"
authors = ["j01tz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
chrono = "0.4"
error-chain = "0.12.4"